Various code cleanups
Change-Id: I914a994049a0cc48c5287ae0c304ba3f31c601ec
Reviewed-on: https://git.eclipse.org/r/16826
Tested-by: Hudson CI
Reviewed-by: Matthias Villiger <mvi@bsiag.com>
IP-Clean: Matthias Villiger <mvi@bsiag.com>